let's extend the nearest neibors api now, that we can also define to wha
